--- a/about.html
+++ b/about.html
@@ -93,6 +93,9 @@
                         Galereya
                       </a>
                     </li>
+                    <div>
+                      <hr class="border-none w-full h-[1px] bg-[#fff] bg-opacity-[0.06]">
+                    </div>
                     <li class="uk-flex uk-flex-right">
                       <a href="contact.html" class="font-400 animBottom" style="visibility: hidden;">
                         Kontaktlar
@@ -346,7 +349,7 @@
             </div>
           </div>
           <div
-            class="main-contents-wrapper uk-container uk-container-large uk-margin-remove-left left-1/2 top-1/2 absolute -translate-x-1/2 -translate-y-1/2 w-full">
+            class="main-contents-wrapper main-contents-wrapper-about uk-container uk-container-large uk-margin-remove-left left-1/2 top-1/2 absolute -translate-x-1/2 -translate-y-1/2 w-full">
             <div class="uk-container uk-container-large relative uk-margin-remove-left">
 
               <div class="content uk-child-width-1-2@l uk-flex-middle uk-grid-large relative z-[2]" uk-grid>
