--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                                                 Xizmatlarimiz
                                             </a>
                                         </li>
+                                        <div>
+                                            <hr class="border-none w-full h-[1px] bg-[#fff] bg-opacity-[0.06]">
+                                        </div>
                                         <li class="uk-flex uk-flex-right">
                                             <a href="gallery.html" class="font-400 animBottom"
                                                 style="visibility: hidden;">
@@ -744,7 +747,7 @@
                                     src="../assets/images/icons/digitals-pattern.svg" alt="img">
                                 <img class="absolute top-0 right-[-10px] w-full h-full object-cover"
                                     src="../assets/images/icons/digital-back.svg" alt="icon">
-                                <div class="bg-[#fff] p-[10px] sm:p-[30px] overflow-hidden h-full">
+                                <div class="bg-[#fff] p-[24px] sm:p-[30px] overflow-hidden h-full">
                                     <span class="title font-[600]">12</span>
                                     <p class="text-[#171A63] sm:text-lg font-[600]">Malakali shifokorlarimiz</p>
                                 </div>
@@ -756,7 +759,7 @@
                                     src="../assets/images/icons/digitals-pattern.svg" alt="img">
                                 <img class="absolute top-0 right-[-10px] w-full h-full object-cover"
                                     src="../assets/images/icons/digital-back.svg" alt="icon">
-                                <div class="bg-[#fff] p-[10px] sm:p-[30px] overflow-hidden h-full">
+                                <div class="bg-[#fff] p-[24px] sm:p-[30px] overflow-hidden h-full">
                                     <span class="title font-[600]">42</span>
                                     <p class="text-[#171A63] sm:text-lg font-[600]">Rozi bemorlarimiz</p>
                                 </div>
@@ -768,7 +771,7 @@
                                     src="../assets/images/icons/digitals-pattern.svg" alt="img">
                                 <img class="absolute top-0 right-[-10px] w-full h-full object-cover"
                                     src="../assets/images/icons/digital-back.svg" alt="icon">
-                                <div class="bg-[#fff] p-[10px] sm:p-[30px] overflow-hidden h-full">
+                                <div class="bg-[#fff] p-[24px] sm:p-[30px] overflow-hidden h-full">
                                     <span class="title font-[600]">7</span>
                                     <p class="text-[#171A63] sm:text-lg font-[600]">Yo‘nalishlarimiz bor</p>
                                 </div>
@@ -780,7 +783,7 @@
                                     src="../assets/images/icons/digitals-pattern.svg" alt="img">
                                 <img class="absolute top-0 right-[-10px] w-full h-full object-cover"
                                     src="../assets/images/icons/digital-back.svg" alt="icon">
-                                <div class="bg-[#fff] p-[10px] sm:p-[30px] overflow-hidden h-full">
+                                <div class="bg-[#fff] p-[24px] sm:p-[30px] overflow-hidden h-full">
                                     <span class="title font-[600]">5</span>
                                     <p class="text-[#171A63] sm:text-lg font-[600]">Yillik tajriba</p>
                                 </div>
