--- a/about.html
+++ b/about.html
@@ -418,7 +418,8 @@
 
   <section class="uk-section uk-margin-large-top main__advantage-section overflow-hidden">
     <div class="uk-container uk-container-large" uk-scrollspy="target: .animate; cls: uk-animation-fade; delay: 100;">
-      <ul class="uk-grid-collapse uk-child-width-1-4@l uk-child-width-1-2@m" uk-grid uk-scrollspy="target: .fade; cls: uk-animation-scale-up; repeat: true">
+      <ul class="uk-grid-collapse uk-child-width-1-4@l uk-child-width-1-2@m" uk-grid
+        uk-scrollspy="target: .fade; cls: uk-animation-scale-up; repeat: true">
         <li class="uk-width-1-2@m">
           <div class="pb-[20px] lg:pb-0"
             uk-scrollspy="target: .anim; cls: uk-animation-slide-top-medium; delay: 100; repeat: true">
@@ -529,7 +530,8 @@
         sotuv bilan muammo
       </p>
       <div class="mt-[42px]" uk-scrollspy="target: .fade; cls: uk-animation-fade; repeat: true">
-        <ul x-data class="uk-child-width-1-5@l uk-child-width-1-3@s uk-child-width-1-2 uk-grid-small uk-grid-match" uk-grid>
+        <ul x-data class="uk-child-width-1-5@l uk-child-width-1-3@s uk-child-width-1-2 uk-grid-small uk-grid-match"
+          uk-grid>
           <template x-for="[id, value] in Object.entries($store.data.sections)" :key="value">
             <li>
               <div class="relative overflow-hidden bg-[#F4F4F4] fade">
@@ -556,25 +558,27 @@
         sotuv bilan muammo
       </p>
       <div class="mt-[42px]" uk-scrollspy="target: .fade; cls: uk-animation-scale-up; repeat: true">
-       <ul x-data class="uk-child-width-1-3@l uk-child-width-1-2@s uk-grid-large uk-grid-match" uk-grid>
-        <template x-for="[id, item] in Object.entries($store.data.doctors)" :key="item">
-          <li>
-            <div class="text-[#171A63] fade">
-             <div x-data="dropdown" class="border border-[E5E5E5] w-full md:h-[420px] overflow-hidden relative">
-               <img class="object-contain w-full h-full" :src="item.img" alt="doctor">
-               <button @click="toggle" class="absolute right-0 bottom-0 w-[50px] h-[50px] flex items-center justify-center border border-[#E5E5E5] z-[2]">
-                 <img src="../assets/images/icons/dots.svg" alt="dots">
-               </button>
-               <div x-show="open" @click.outside="open = false" class="card-hover p-[15px] sm:p-[50px] absolute left-0 top-0 w-full h-full z-[3]">
-                 <p class="text-[#171A63]" x-text="item.desc"></p>
-               </div>
-             </div>
-             <p class="text-[20px] sm:text-[26px] font-medium mt-[32px]" x-text="item.name"></p>
-             <span class="sm:text-xl" x-text="item.job"></span>
-            </div>
-          </li>
-        </template>
-       </ul>
+        <ul x-data class="uk-child-width-1-3@l uk-child-width-1-2@s uk-grid-large uk-grid-match" uk-grid>
+          <template x-for="[id, item] in Object.entries($store.data.doctors)" :key="item">
+            <li>
+              <div class="text-[#171A63] fade">
+                <div x-data="dropdown" class="border border-[E5E5E5] w-full md:h-[420px] overflow-hidden relative">
+                  <img class="object-contain w-full h-full" :src="item.img" alt="doctor">
+                  <button @click="toggle"
+                    class="absolute right-0 bottom-0 w-[50px] h-[50px] flex items-center justify-center border border-[#E5E5E5] z-[2]">
+                    <img src="../assets/images/icons/dots.svg" alt="dots">
+                  </button>
+                  <div x-show="open" @click.outside="open = false"
+                    class="card-hover p-[15px] sm:p-[50px] absolute left-0 top-0 w-full h-full z-[3]">
+                    <p class="text-[#171A63]" x-text="item.desc"></p>
+                  </div>
+                </div>
+                <p class="text-[20px] sm:text-[26px] font-medium mt-[32px]" x-text="item.name"></p>
+                <span class="sm:text-xl" x-text="item.job"></span>
+              </div>
+            </li>
+          </template>
+        </ul>
       </div>
     </div>
   </section>
@@ -636,7 +640,8 @@
     </div>
   </section>
 
-  <footer class="uk-section mt-[110px] bg-[#F4F4F4] uk-padding-remove-bottom" uk-scrollspy="target: .animation; cls: uk-animation-slide-top-medium; repeat: true; delay: 100">
+  <footer class="uk-section mt-[110px] bg-[#F4F4F4] uk-padding-remove-bottom"
+    uk-scrollspy="target: .animation; cls: uk-animation-slide-top-medium; repeat: true; delay: 100">
     <div class="uk-container uk-container-large">
       <div class="uk-grid-large uk-child-width-1-4@l uk-child-width-1-2 lg:justify-between" uk-grid>
         <div class="w-full sm:w-[200px] flex sm:inline-block justify-center">
@@ -733,6 +738,10 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="../assets/js/custom.js"></script>
   <script src="../assets/js/store.js"></script>
+
+  <script>
+    AOS.init();
+  </script>
 
 </body>
 
