--- a/index.html
+++ b/index.html
@@ -1484,17 +1484,26 @@
         </div>
     </footer>
 
-    <div id="overlay" class="fixed top-0 left-0 w-full h-full z-[999999999]" style="display: none;">
+    <div id="overlay" class="fixed top-0 left-0 w-full h-full z-[999999999]">
         <div class="bg-[#171A63] w-full h-full flex items-center flex-col justify-center">
-            <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+            <div class="lds-ring">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
     </div>
 
+    <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/uikit-icons.min.js"></script>
     <script src="../assets/js/uikit.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/store.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
