--- a/contact.html
+++ b/contact.html
@@ -404,18 +404,18 @@
       </p>
       <div class="uk-margin-large-top">
         <div>
-          <ul class="uk-child-width-1-3 items-center" uk-grid>
+          <ul class="uk-child-width-1-3@l uk-child-width-1-2@s items-start" uk-grid>
             <li>
-              <h5 class="text-[#171A63] text-2xl text-opacity-[0.64] pb-[10px]">Telefon</h5>
-              <a href="#" class="text-[#171A63] text-[36px]">+998 (55) 555-77-11</a>
+              <h5 class="text-[#171A63] text-lg 2xl:text-2xl text-opacity-[0.64] pb-[10px]">Telefon</h5>
+              <a href="#" class="text-[#171A63] text-2xl xl:text-[30px] 2xl:text-[36px]">+998 (55) 555-77-11</a>
             </li>
             <li>
-              <h5 class="text-[#171A63] text-2xl text-opacity-[0.64] pb-[10px]">E-mail</h5>
-              <a href="#" class="text-[#171A63] text-[36px]">sehatclinic@gmail.com</a>
+              <h5 class="text-[#171A63] text-lg 2xl:text-2xl text-opacity-[0.64] pb-[10px]">E-mail</h5>
+              <a href="#" class="text-[#171A63] text-2xl xl:text-[30px] 2xl:text-[36px]">sehatclinic@gmail.com</a>
             </li>
             <li>
-              <h5 class="text-[#171A63] text-2xl text-opacity-[0.64] pb-[10px]">Social media</h5>
-              <div class="flex items-center space-x-[20px]">
+              <h5 class="text-[#171A63] text-lg 2xl:text-2xl text-opacity-[0.64] pb-[10px]">Social media</h5>
+              <div class="flex sm:items-center uk-grid-medium" uk-grid>
                 <a href="#" class="text-[#171A63] text-2xl">
                   Instagram
                 </a>
@@ -430,23 +430,25 @@
           </ul>
         </div>
         <div class="uk-margin-large-top" uk-grid>
-          <div class="uk-width-1-4">
-            <h5 class="text-[#171A63] text-2xl text-opacity-[0.64] pb-[10px]">Joylashuv</h5>
-            <p class="text-[#171A63] text-[36px]">
+          <div class="uk-width-1-4@m">
+            <h5 class="text-[#171A63] text-lg 2xl:text-2xl text-opacity-[0.64] pb-[10px]">Joylashuv</h5>
+            <p class="text-[#171A63] text-2xl xl:text-[30px] 2xl:text-[36px]">
               Andijon shaxar
               axmad donish
               kuchasi 6- manzil
             </p>
           </div>
           <div class="uk-width-expand">
-            <iframe
+            <div class="h-[440px]">
+              <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2997.4438038781886!2d69.2828901152867!3d41.29920797927233!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b2616f94705%3A0x720b816eb8acffcb!2sMountain%20uz!5e0!3m2!1sru!2s!4v1650145715884!5m2!1sru!2s"
-              width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
           </div>
         </div>
       </div>
-      <img class="absolute left-[-10px] top-[-40px]" src="../assets/images/icons/square-pattern.svg" alt="img">
+      <img class="absolute left-[-10px] top-[-40px] z-[-1] uk-visible@s" src="../assets/images/icons/square-pattern.svg" alt="img">
     </div>
   </section>
 
